Removed warnings as suggested by IDE